# coffeetree

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
00_EDA/: 01_csv_eda_v02.ipynb
01_Modelling/: 01_csv_pycaret.ipynb  02_raw_layered_lgbm.ipynb  04_csv_pycaret_v02.ipynb  func.py
01_Modelling/catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
01_Modelling/catboost_info/learn/: events.out.tfevents
artifacts/catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
artifacts/catboost_info/learn/: events.out.tfevents
catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
catboost_info/learn/: events.out.tfevents
data/processed/: df_model.parquet  df_model_v02.parquet
data/raw/: modelo_cafe_2024nov.xlsm  modelo_cafe_2024out.xlsm
notebooks/: 00_csv_eda.ipynb  01_csv_pycaret.ipynb
