[tool.poetry]
name = "coffeetree"
version = "0.0.1"
description = "Modelo do cafe"
authors = ["Caiozuz e Pedrozuz"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
openpyxl = "3.1.5"
janitor = "^0.1.1"
statsmodels = "0.14.4"
mlflow = "^2.17.2"
pyarrow = "<=18.0.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
